--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 </button>
                 
             </div>
+            <img id="hamburger-menu" src="./assets/hamburger-menu.png" alt="">
         </section>
     </header>
 </body>
