--- a/index.html
+++ b/index.html
@@ -47,30 +47,30 @@
         </section>
     </header>
     <main>
-        <section class="podcast-section">
-            <div class="podcast-content">
-                <h2>About The Podcast</h2>
-                <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. We break down complex topics into digestible insights, explore productivity strategies that actually work, and share stories of personal growth from industry leaders.
-                </p>
-                <p>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
-            </div>
-            <span class="devider"></span>
-            <div class="podcast-cards">
-                <div class="card">
-                    <h2>150K+</h2>
-                    <p>MONTHLY LISTENERS</p>
+        <section class="podcast-section primary-bg-color">
+            <div class="podcast-container flex">
+                <div class="podcast-content">
+                    <h2 class="podcast-section-title">About The Podcast</h2>
+                    <p class="podcast-section-text">TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.<br>We break down complex topics into digestible insights, explore productivity strategies that actually work,<br>and share stories of personal growth from industry leaders.<br><br>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
                 </div>
-                <div class="card">
-                    <h2>200+</h2>
-                    <p>EPISODES PUBLISHED</p>
-                </div>
-                <div class="card">
-                    <h2>4.9*</h2>
-                    <p>AVERAGE RATING</p>
-                </div>
-                <div class="card">
-                    <h2>50+</h2>
-                    <p>INDUSTRY EXPERTS</p>
+                <span class="divider"></span>
+                <div class="podcast-cards">
+                    <div class="card">
+                        <h2>150K+</h2>
+                        <p>MONTHLY LISTENERS</p>
+                    </div>
+                    <div class="card">
+                        <h2>200+</h2>
+                        <p>EPISODES PUBLISHED</p>
+                    </div>
+                    <div class="card">
+                        <h2>4.9<span class="star"></span></h2>
+                        <p>AVERAGE RATING</p>
+                    </div>
+                    <div class="card">
+                        <h2>50+</h2>
+                        <p>INDUSTRY EXPERTS</p>
+                    </div>
                 </div>
             </div>
         </section>
