--- a/index.html
+++ b/index.html
@@ -76,22 +76,30 @@
         </section>
 
         <section class="why-choose-section secondary-bg-color">
-            <div class="why-choose">
-                <h2>Why Choose TechWave</h2>
+            <div class="why-choose flex">
+                <h2 class="why-choose-title">Why Choose TechWave</h2>
                 <div class="why-card-container">
-                    <div class="why-card">
+                    <div class="why-card card-bg-color">
                         <img src="./assets/headphone.png" alt="">
                         <h4>Premium Audio Quality</h4>
                         <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+                    </div>
+                    <div class="why-card card-bg-color">
                         <img src="./assets/device.png" alt="">
                         <h4>Mobile Friendly</h4>
                         <p>Listen on the go with seamless mobile experience and office downloads.</p>
+                    </div>
+                    <div class="why-card card-bg-color">
                         <img src="./assets/location.png" alt="">
                         <h4>Global Community</h4>
                         <p>Connect with tech enthusiasts form over 120 countries worldwide.</p>
+                    </div>
+                    <div class="why-card card-bg-color">
                         <img src="./assets/Group 18.png" alt="">
                         <h4>Exclusive Interviews</h4>
                         <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+                    </div>
+                    <div class="why-card card-bg-color">
                         <img src="./assets/resource.png" alt="">
                         <h4>Rich Resources</h4>
                         <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
