--- a/index.html
+++ b/index.html
@@ -108,35 +108,47 @@
             </div>
         </section>
 
-        <section class="featured-episodes-section">
-            <div class="featured-episodes">
-                <h2>Featured Episodes</h2>
+        <section class="featured-episodes-section primary-bg-color">
+            <div class="featured-episodes flex">
+                <h2 class="featured-title">Featured Episodes</h2>
                 <div class="featured-card-container">
-                    <div class="feature-card">
-                        <iframe width="380" height="214" src="https://www.youtube.com/embed/KKNCiRWd_j0?si=qUturUx3xzVbkEwW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        <h3>The Future of AI in Everyday Life</h3>
-                        <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
-                        <div class="duration">
-                            <img src="./assets/clock.png" alt="" class="clock-icon">
-                            <h4>22 min</h4>
+                    <div class="featured-card card-bg-color">
+                        <div class="video-wrap">
+                            <iframe width="380" height="214" src="https://www.youtube.com/embed/KKNCiRWd_j0?si=qUturUx3xzVbkEwW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </div>
+                        <div class="featured-card-content">
+                            <h3>The Future of AI in Everyday Life</h3>
+                            <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                            <div class="duration flex">
+                                <img src="./assets/clock.png" alt="" class="clock-icon">
+                                <h4>22 min</h4>
+                            </div>
                         </div>
                     </div>
-                    <div class="feature-card">
-                        <iframe width="380" height="214" src="https://www.youtube.com/embed/NgoJjIFULDE?si=mS2GH3nbBg32TcVR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        <h3>Building Better Habits for Remote Work</h3>
-                        <p>Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
-                        <div class="duration">
-                            <img src="./assets/clock.png" alt="" class="clock-icon">
-                            <h4>14 min</h4>
+                    <div class="featured-card card-bg-color">
+                        <div class="video-wrap">
+                            <iframe width="380" height="214" src="https://www.youtube.com/embed/NgoJjIFULDE?si=mS2GH3nbBg32TcVR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </div>
+                        <div class="featured-card-content">
+                            <h3>Building Better Habits for Remote Work</h3>
+                            <p>Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                            <div class="duration flex">
+                                <img src="./assets/clock.png" alt="" class="clock-icon">
+                                <h4>14 min</h4>
+                            </div>
                         </div>
                     </div>
-                    <div class="feature-card">
-                        <iframe width="380" height="214" src="https://www.youtube.com/embed/XmWkcePhf84?si=ghqzHw939xapU55U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        <h3>Career Growth in Tech: A Roadmap</h3>
-                        <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
-                        <div class="duration">
-                            <img src="./assets/clock.png" alt="" class="clock-icon">
-                            <h4>38 min</h4>
+                    <div class="featured-card card-bg-color">
+                        <div class="video-wrap">
+                            <iframe width="380" height="214" src="https://www.youtube.com/embed/XmWkcePhf84?si=ghqzHw939xapU55U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </div>
+                        <div class="featured-card-content">
+                            <h3>Career Growth in Tech: A Roadmap</h3>
+                            <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                            <div class="duration flex">
+                                <img src="./assets/clock.png" alt="" class="clock-icon">
+                                <h4>38 min</h4>
+                            </div>
                         </div>
                     </div>
                 </div>
