made the featured section responsive for small devices

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="featured-card-container">
                     <div class="featured-card card-bg-color">
                         <div class="video-wrap">
-                            <iframe width="380" height="214" src="https://www.youtube.com/embed/KKNCiRWd_j0?si=qUturUx3xzVbkEwW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe width="" height="" src="https://www.youtube.com/embed/KKNCiRWd_j0?si=qUturUx3xzVbkEwW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
                         <div class="featured-card-content">
                             <h3>The Future of AI in Everyday Life</h3>
@@ -127,7 +127,7 @@
                     </div>
                     <div class="featured-card card-bg-color">
                         <div class="video-wrap">
-                            <iframe width="380" height="214" src="https://www.youtube.com/embed/NgoJjIFULDE?si=mS2GH3nbBg32TcVR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe width="" height="" src="https://www.youtube.com/embed/NgoJjIFULDE?si=mS2GH3nbBg32TcVR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
                         <div class="featured-card-content">
                             <h3>Building Better Habits for Remote Work</h3>
@@ -140,7 +140,7 @@
                     </div>
                     <div class="featured-card card-bg-color">
                         <div class="video-wrap">
-                            <iframe width="380" height="214" src="https://www.youtube.com/embed/XmWkcePhf84?si=ghqzHw939xapU55U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe width="" height="" src="https://www.youtube.com/embed/XmWkcePhf84?si=ghqzHw939xapU55U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
                         <div class="featured-card-content">
                             <h3>Career Growth in Tech: A Roadmap</h3>
