--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <section class="host-section flex primary-bg-color">
             <h2 class="host-section-title">Meet The Host</h2>
             <div class="host-card flex card-bg-color">
-                <img src="./assets/host.png" alt="the hosts picture">
+                <img class="host-img" src="./assets/host.png" alt="the hosts picture">
                 <div class="host-info flex">
                     <h3>Alex Kumar</h3>
                     <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
