--- a/index.html
+++ b/index.html
@@ -179,6 +179,29 @@
                 </div>
             </div>
         </section>
+
+        <section class="footer-section">
+            <h1>TechWave</h1>
+            <div class="platform-info">
+                <div class="platform">
+                    <img src="./assets/spotify.png" alt="spotify logo">
+                    <p>Spotify</p>
+                </div>
+                <div class="platform">
+                    <img src="./assets/apple-podcast.png" alt="apple podcast logo">
+                    <p>Apple Podcast</p>
+                </div>
+                <div class="platform">
+                    <img src="./assets/youtube.png" alt="youtube logo">
+                    <p>Youtube</p>
+                </div>
+                <div class="platform">
+                    <img src="./assets/twitter.png" alt="twitter logo">
+                    <p>Twitter</p>
+                </div>
+            </div>
+            <p>@copy 2026 TechWave Podcast. All rights reserved</p>
+        </section>
     </main>
 </body>
 </html>
