--- a/index.html
+++ b/index.html
@@ -25,24 +25,26 @@
             <img id="hamburger-menu" src="./assets/hamburger-menu.png" alt="">
         </section>
 
-        <section class="hero-section flex hidden">
-            <div class="microphone">
-                <img src="./assets/microphone.png" alt="">
-            </div>
-            <div class="new-badge">New</div>
-            <div>
-                <h3 class="hero-title">TechWave</h3>
-                <p class="hero-text">Your daily dose of tech insights, productivity hacks, and personal growth</p>
-            </div>
-            <div class="group-btn flex">
-                <button class="listen-on-spotify-btn btn-gradient buttons">
-                    <img src="./assets/spotify.png" alt="">
-                    Listen On Spotify
-                </button>
-                <button class="subscribe-hero-btn buttons">
-                    <img src="./assets/message.png" alt="">
-                    Subscribe
-                </button>
+        <section class="hero-section">
+            <div class="hero-content flex">
+                <div class="microphone">
+                    <img src="./assets/microphone.png" alt="">
+                    <div class="new-badge">New</div>
+                </div>
+                <div class="hero-text">
+                    <h3 class="hero-title">TechWave</h3>
+                    <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                </div>
+                <div class="group-btn flex">
+                    <button class="listen-on-spotify-btn btn-gradient buttons">
+                        <img src="./assets/spotify.png" alt="">
+                        Listen On Spotify
+                    </button>
+                    <button class="subscribe-hero-btn buttons">
+                        <img src="./assets/message.png" alt="">
+                        Subscribe
+                    </button>
+                </div>
             </div>
         </section>
     </header>
@@ -51,7 +53,7 @@
             <div class="podcast-container flex">
                 <div class="podcast-content">
                     <h2 class="podcast-section-title">About The Podcast</h2>
-                    <p class="podcast-section-text">TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.<br>We break down complex topics into digestible insights, explore productivity strategies that actually work,<br>and share stories of personal growth from industry leaders.<br><br>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+                    <p class="podcast-section-text">TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. We break down complex topics into digestible insights, explore productivity strategies that actually work, and share stories of personal growth from industry leaders.<br><br>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
                 </div>
                 <span class="divider"></span>
                 <div class="podcast-cards">
@@ -180,9 +182,9 @@
             </div>
         </section>
 
-        <section class="footer-section">
-            <h1>TechWave</h1>
-            <div class="platform-info">
+        <section class="footer-section flex">
+            <h1 class="brand">Tech<span class="text-gradient">Wave</span></h1>
+            <div class="platform-info flex">
                 <div class="platform">
                     <img src="./assets/spotify.png" alt="spotify logo">
                     <p>Spotify</p>
@@ -192,7 +194,7 @@
                     <p>Apple Podcast</p>
                 </div>
                 <div class="platform">
-                    <img src="./assets/youtube.png" alt="youtube logo">
+                    <img src="./assets/youtube-podcast.png" alt="youtube logo">
                     <p>Youtube</p>
                 </div>
                 <div class="platform">
