added an animation to the microphone background, and some other small changes

--- a/index.html
+++ b/index.html
@@ -183,26 +183,28 @@
         </section>
 
         <section class="footer-section flex">
-            <h1 class="brand">Tech<span class="text-gradient">Wave</span></h1>
-            <div class="platform-info flex">
-                <div class="platform">
-                    <img src="./assets/spotify.png" alt="spotify logo">
-                    <p>Spotify</p>
+            <div class="footer-content flex">
+                <h1 class="brand">Tech<span class="text-gradient">Wave</span></h1>
+                <div class="platform-info flex">
+                    <div class="platform">
+                        <img src="./assets/spotify.png" alt="spotify logo">
+                        <p>Spotify</p>
+                    </div>
+                    <div class="platform">
+                        <img src="./assets/apple-podcast.png" alt="apple podcast logo">
+                        <p>Apple Podcast</p>
+                    </div>
+                    <div class="platform">
+                        <img src="./assets/youtube-podcast.png" alt="youtube logo">
+                        <p>Youtube</p>
+                    </div>
+                    <div class="platform">
+                        <img src="./assets/twitter.png" alt="twitter logo">
+                        <p>Twitter</p>
+                    </div>
                 </div>
-                <div class="platform">
-                    <img src="./assets/apple-podcast.png" alt="apple podcast logo">
-                    <p>Apple Podcast</p>
-                </div>
-                <div class="platform">
-                    <img src="./assets/youtube-podcast.png" alt="youtube logo">
-                    <p>Youtube</p>
-                </div>
-                <div class="platform">
-                    <img src="./assets/twitter.png" alt="twitter logo">
-                    <p>Twitter</p>
-                </div>
+                <p>@copy 2026 TechWave Podcast. All rights reserved</p>
             </div>
-            <p>@copy 2026 TechWave Podcast. All rights reserved</p>
         </section>
     </main>
 </body>
