added some transormations, links, and some small necessary changes

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <section class="navbar flex primary-bg-color">
             <h3 class="logo">Tech<span class="text-gradient">Wave</span></h3>
             <ul class="menu flex">
-                <li><a href="">About</a></li>
-                <li><a href="">Episodes</a></li>
-                <li><a href="">Host</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#episodes">Episodes</a></li>
+                <li><a href="#host">Host</a></li>
             </ul>
             <div class="navbar-btn">
                 <button class="subscribe-btn btn-gradient buttons">
@@ -49,7 +49,7 @@
         </section>
     </header>
     <main>
-        <section class="podcast-section primary-bg-color">
+        <section id="about" class="podcast-section primary-bg-color">
             <div class="podcast-container flex">
                 <div class="podcast-content">
                     <h2 class="podcast-section-title">About The Podcast</h2>
@@ -110,7 +110,7 @@
             </div>
         </section>
 
-        <section class="featured-episodes-section primary-bg-color">
+        <section id="episodes" class="featured-episodes-section primary-bg-color">
             <div class="featured-episodes flex">
                 <h2 class="featured-title">Featured Episodes</h2>
                 <div class="featured-card-container">
@@ -157,7 +157,7 @@
             </div>
         </section>
 
-        <section class="host-section flex primary-bg-color">
+        <section id="host" class="host-section flex primary-bg-color">
             <h2 class="host-section-title">Meet The Host</h2>
             <div class="host-card flex card-bg-color">
                 <img class="host-img" src="./assets/host.png" alt="the hosts picture">
@@ -166,16 +166,16 @@
                     <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
                     <div class="host-social-icons flex">
                         <div class="icons">
-                            <img src="./assets/linkedin.png" alt="linkedin logo">
+                            <a href="https://www.linkedin.com/" target="_blank"><img src="./assets/linkedin.png" alt="linkedin logo"></a>
                         </div>
                         <div class="icons">
-                            <img src="./assets/x.png" alt="x logo">
+                            <a href="https://x.com/home" target="_blank"><img src="./assets/x.png" alt="x logo"></a>
                         </div>
                         <div class="icons">
-                            <img src="./assets/instagram.png" alt="instagram logo">
+                            <a href="https://www.instagram.com" target="_blank"><img src="./assets/instagram.png" alt="instagram logo"></a>
                         </div>
                         <div class="icons">
-                            <img src="./assets/youtube.png" alt="youtube logo">
+                            <a href="https://www.youtube.com/" target="_blank"><img src="./assets/youtube.png" alt="youtube logo"></a>
                         </div>
                     </div>
                 </div>
@@ -188,19 +188,19 @@
                 <div class="platform-info flex">
                     <div class="platform">
                         <img src="./assets/spotify.png" alt="spotify logo">
-                        <p>Spotify</p>
+                        <a href="https://open.spotify.com/" target="_blank"><p>Spotify</p></a>
                     </div>
                     <div class="platform">
                         <img src="./assets/apple-podcast.png" alt="apple podcast logo">
-                        <p>Apple Podcast</p>
+                        <a href="https://podcasts.apple.com/us/home" target="_blank"><p>Apple Podcast</p></a>
                     </div>
                     <div class="platform">
                         <img src="./assets/youtube-podcast.png" alt="youtube logo">
-                        <p>Youtube</p>
+                        <a href="https://www.youtube.com/" target="_blank"><p>Youtube</p></a>
                     </div>
                     <div class="platform">
                         <img src="./assets/twitter.png" alt="twitter logo">
-                        <p>Twitter</p>
+                        <a href="https://x.com/home" target="_blank"><p>Twitter</p></a>
                     </div>
                 </div>
                 <p>@copy 2026 TechWave Podcast. All rights reserved</p>
