responsive for mediam devices with max-width of 768px

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <img src="./assets/microphone.png" alt="">
                     <div class="new-badge">New</div>
                 </div>
-                <div class="hero-text">
+                <div class="hero-text flex">
                     <h3 class="hero-title">TechWave</h3>
                     <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
                 </div>
