made the website responsive for devices with min-width 768px and max-width 1024px

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <a href="https://x.com/home" target="_blank"><p>Twitter</p></a>
                     </div>
                 </div>
-                <p>@copy 2026 TechWave Podcast. All rights reserved</p>
+                <p>&copy 2026 TechWave Podcast. All rights reserved</p>
             </div>
         </section>
     </main>
